Layout and sizing fixes on mobile.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,3 @@
-@media screen and (max-width: 768px) {
-  .connect dl {
-    align-items: flex-start;
-    flex-direction: column;
-  }
-}
-
 /* Styling */
 .cnt-lnk svg {
   transition: fill var(--duration) ease;
@@ -76,6 +69,12 @@
   border-radius: 43% 57% 43% 57%/36% 64% 36% 64%;
 }
 
+@media screen and (max-width: 768px) {
+  .hero-copy {
+    font-size: 1.5rem;
+  }
+}
+
 /* Layout */
 body {
   grid-template-columns: minmax(2rem,1fr) minmax(288px,1200px) minmax(2rem,1fr);
@@ -102,9 +101,16 @@ footer {
 
 nav {
   max-height: 3.5rem;
-  max-width: 14rem;
+  max-width: 12rem;
 }
 
 .footer-copy {
   max-width: 16rem;
+}
+
+@media screen and (max-width: 768px) {
+  .connect dl {
+    align-items: flex-start;
+    flex-direction: column;
+  }
 }
